java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateParam4.pass
package org.netbeans.test.java.hints;

public abstract class CreateParam4 {
    
    public void test(int a) {
    }
    
    public void test(int a,String foo) {
        foo = "bar";
    }
    
}
